--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "utility-css",
-  "version": "0.0.1",
-  "description": "utility classes",
+  "name": "u-classnames",
+  "version": "0.0.2",
+  "description": "utility class names",
   "scripts": {
-    "develop": "stylus -w utility-css.styl -o utility-css.css",
-    "postcss": "postcss utility-css.css -o utility-css.css",
-    "build": "stylus utility-css.styl -o utility-css.css && npm run postcss",
-    "release": "npm run build && cleancss -O2 -f 'breaks:afterComment=on' -o utility-css.min.css utility-css.css"
+    "develop": "stylus -w ucs.styl -o ucs.css",
+    "postcss": "postcss ucs.css -o ucs.css",
+    "build": "stylus ucs.styl -o ucs.css && npm run postcss",
+    "release": "npm run build && cleancss -O2 -f 'breaks:afterComment=on' -o ucs.min.css ucs.css"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kobaatsu/utility-css.git"
+    "url": "git+https://github.com/kobaatsu/u-classnames.git"
   },
   "bugs": {
-    "url": "https://github.com/kobaatsu/utility-css/issues"
+    "url": "https://github.com/kobaatsu/u-classnames/issues"
   },
   "keywords": [
     "stylus"
@@ -23,8 +23,8 @@
     "email": "kobaatsu@gmail.com"
   },
   "license": "MIT",
-  "main": "utility-css.styl",
-  "homepage": "https://github.com/kobaatsu/utility-css#readme",
+  "main": "ucs.styl",
+  "homepage": "https://github.com/kobaatsu/u-classnames#readme",
   "devDependencies": {
     "autoprefixer": "^9.1.5",
     "clean-css-cli": "^4.2.1",
